@@ -677,6 +677,7 @@ forward_propagate_addr_expr_1 (tree name, tree def_rhs, tree use_stmt,
      array elements, then the result is converted into the proper
      type for the arithmetic.  */
   if (TREE_CODE (TREE_OPERAND (rhs, 1)) == SSA_NAME
+      && useless_type_conversion_p (TREE_TYPE (name), TREE_TYPE (def_rhs))
       /* Avoid problems with IVopts creating PLUS_EXPRs with a
 	 different type than their operands.  */
       && useless_type_conversion_p (TREE_TYPE (rhs), TREE_TYPE (name)))
