@@ -1,3 +1,8 @@
+2009-01-30  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/39041
+	* gcc.c-torture/compile/pr39041.c: New testcase.
+
 2009-01-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
